@@ -67,6 +67,9 @@ var DEFAULTS = {
   kubernetesPodUID: undefined,
   logLevel: 'info',
   logUncaughtExceptions: false, // TODO: Change to `true` in the v4.0.0
+  // Rough equivalent of the Java Agent's max_queue_size:
+  // https://www.elastic.co/guide/en/apm/agent/java/current/config-reporter.html#config-max-queue-size
+  maxQueueSize: 1024,
   metricsInterval: '30s',
   metricsLimit: 1000,
   sanitizeFieldNames: ['password', 'passwd', 'pwd', 'secret', '*key', '*token*',
@@ -123,6 +126,7 @@ var ENV_TABLE = {
   kubernetesPodUID: ['ELASTIC_APM_KUBERNETES_POD_UID', 'KUBERNETES_POD_UID'],
   logLevel: 'ELASTIC_APM_LOG_LEVEL',
   logUncaughtExceptions: 'ELASTIC_APM_LOG_UNCAUGHT_EXCEPTIONS',
+  maxQueueSize: 'ELASTIC_APM_MAX_QUEUE_SIZE',
   metricsInterval: 'ELASTIC_APM_METRICS_INTERVAL',
   metricsLimit: 'ELASTIC_APM_METRICS_LIMIT',
   payloadLogFile: 'ELASTIC_APM_PAYLOAD_LOG_FILE',
@@ -175,6 +179,7 @@ var BOOL_OPTS = [
 ]
 
 var NUM_OPTS = [
+  'maxQueueSize',
   'metricsLimit',
   'sourceLinesErrorAppFrames',
   'sourceLinesErrorLibraryFrames',
@@ -294,6 +299,7 @@ class Config {
           // Streaming conf
           size: conf.apiRequestSize,
           time: conf.apiRequestTime * 1000,
+          maxQueueSize: conf.maxQueueSize,
 
           // Debugging
           logger: clientLogger,
