@@ -36,6 +36,15 @@ Notes:
 [float]
 ===== Features
 
+* The handling of sending events (transactions, spans, errors) to APM server
+  has improved in a few ways. During temporary spikes in load and/or an APM
+  server that is unresponsive, the agent will buffer a number of events and
+  *drop* them above a certain limit (configurable via <<max-queue-size>>).
+  This helps ensure the agent does not overly consume memory and CPU. As well,
+  the agent will now https://github.com/elastic/apm/blob/master/specs/agents/transport.md#transport-errors[backoff]
+  when the APM server errors. Finally, improved error handling means it will
+  terminate failing requests to the APM server more quickly.
+
 * The APM agent's own internal logging now uses structured JSON logging using
   the https://getpino.io/#/docs/api?id=logger[pino API], and formatted in
   {ecs-logging-ref}/intro.html[ecs-logging] format. The log records on stdout
